cmake_minimum_required(VERSION 3.12)
project(FingerDetect)
set(OpenCV_DIR /home/Programs/opencv4.0.1/lib/cmake/opencv4/)
find_package(OpenCV REQUIRED)
set(CMAKE_CXX_STANDARD 17)
add_executable(FINAL final.cpp)
target_link_libraries(FINAL ${OpenCV_LIBS})
add_executable(FINALVID finalvid.cpp)
target_link_libraries(FINALVID ${OpenCV_LIBS})
